# aidm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  world.json
adventure/: adventure.py  log_config.py  main.py  rogue.txt  scenario.txt  setting.txt  worldgen.py
adventure/core/: __init__.py  action.py  character.py  game_state.py  location.py  state_validator.py
adventure/llm/: __init__.py  anthropic.py  base.py  client.py  openai.py
adventure/prompts/: __init__.py  action_rules.py  character_rules.py  game_rules.py  location_rules.py  response_rules.py
adventure/schemas/: __init__.py  actions.py  character.py  game_state.py  locations.py
adventure/utils/: config.py
tests/: conftest.py  test_action.py  test_character.py  test_game_state.py
